<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/create_new_staff_header"
        android:textColor="#278432"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/container_editing_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/field_staff_name"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_staff_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:hint="@string/hint_staff_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/field_staff_birthday"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_staff_birthday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:hint="@string/hint_staff_birthday"
                android:inputType="date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/field_staff_address"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_staff_address"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:hint="@string/hint_staff_address" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/field_staff_phone"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_staff_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:hint="@string/hint_staff_phone"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/field_staff_position"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_staff_position"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:hint="@string/hint_staff_position" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/field_staff_deparment"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_staff_department"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70"></Spinner>
        </LinearLayout>

        <CheckBox
            android:id="@+id/checkbox_left_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/field_staff_left_job" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_action_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_enable_editing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="saveNewStaff"
            android:text="@string/label_save" />
    </LinearLayout>
</LinearLayout>

