<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_cloud"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/update_profile_header"
        android:textColor="#278432"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/container_editing_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/field_staff_name"
                android:textSize="18sp"
                android:gravity="center_vertical"/>

            <EditText
                android:id="@+id/edit_staff_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:hint="@string/hint_staff_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/field_staff_birthday"
                android:textSize="18sp"
                android:gravity="center_vertical"/>

            <EditText
                android:id="@+id/edit_staff_birthday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:editable="false"
                android:hint="@string/hint_staff_birthday"
                android:inputType="none" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/field_staff_address"
                android:textSize="18sp"
                android:gravity="center_vertical"/>

            <EditText
                android:id="@+id/edit_staff_address"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:hint="@string/hint_staff_address" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/field_staff_phone"
                android:textSize="18sp"
                android:gravity="center_vertical"/>

            <EditText
                android:id="@+id/edit_staff_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:hint="@string/hint_staff_phone"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/field_staff_position"
                android:textSize="18sp"
                android:gravity="center_vertical"/>

            <EditText
                android:id="@+id/edit_staff_position"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:hint="@string/hint_staff_position" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/field_staff_deparment"
                android:textSize="18sp"
                android:gravity="center_vertical"/>

            <Spinner
                android:id="@+id/spinner_staff_department"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70"></Spinner>
        </LinearLayout>

        <CheckBox
            android:id="@+id/checkbox_left_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/field_staff_left_job" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_action_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_enable_editing"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_margin="3dp"
            android:background="@drawable/nice_button"
            android:onClick="enableStaffEditing"
            android:shadowColor="@android:color/holo_blue_dark"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/label_change"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_save_change"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_margin="3dp"
            android:background="@drawable/nice_button"
            android:shadowColor="@android:color/holo_blue_dark"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/label_save"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>

